# svi-smc

./: .gitignore  Makefile  main.py  pyproject.toml
config/: params.yaml
diagnostics/: diagnostics.py
src/: calibrate.py  config_loader.py  decorators.py  diagnostics.py
src/core/: calibrate.py  dataclasses.py  model.py
src/utils/: config_loader.py  decorators.py  logger.py
tests/: test_model.py
